--- a/index.html
+++ b/index.html
@@ -407,7 +407,6 @@
             </div>
             <!-- Show after form send -->
             <div id="anketaAfterSend" class="feature_part">
-                <!-- <div class="container"> -->
                 <div class="sendmess row justify-content-center">
                     <div class="text-center">
                         Спасибо! Анкета успешно отправлена.
@@ -420,7 +419,7 @@
 
                 <!-- </div> -->
             </div>
-            <form action="#" method="post" id="fprofile" name="formAnketa" enctype="multipart/form-data">
+            <form id="fprofile" enctype="multipart/form-data" method="post">
                 <div class="row justify-content-center anketa">
                     <div class="col-lg-4">
                         <div class="row">
@@ -443,15 +442,18 @@
                 <div class="row justify-content-center text-center mt-2">
                     <div class="col-lg-3 col-md-5 file-width">
                         <span>Фото в полный рост</span><br>
-                        <input id="file1" name="file[]" value="1" size="40" type="file" accept="image/jpeg, image/png" class="inputfile" multiple>
-                        <label for="file1">
-                            <img alt="" src="./img/icon/file-bg.svg">
+                        <input id="fileFF" name="fileFF" value="1" size="40" type="file" accept="image/jpeg, image/png" class="inputfile" onclick="shows_selected_file(this.id)">
+                        <label for="fileFF" class="inputfile_label">
+                            <img class="input_bg_img" alt="" src="./img/icon/file-bg.svg">
                         </label>
+
                     </div>
                     <div class="col-lg-3 col-md-5 file-width">
                         <span>Фото с других ракурсов</span><br>
-                        <input id="file2" name="file[]" value="1" size="40" type="file" accept="image/jpeg, image/png" class="inputfile" multiple>
-                        <label for="file2"><img alt="" src="./img/icon/file-bg.svg"></label>
+                        <input id="file2FF" name="fileFF" value="1" size="40" type="file" accept="image/jpeg, image/png" class="inputfile" onclick="shows_selected_file(this.id)">
+                        <label for="file2FF" class="inputfile_label">
+                            <img class="input_bg_img" alt="" src="./img/icon/file-bg.svg">
+                        </label>
 
                     </div>
                 </div><br>
@@ -469,7 +471,7 @@
                 </div><br>
 
                 <div style="color: white" class="boot-center" id="profileResult">
-                    <input id="btn" value="Отправить" name="sendMail" type="submit" class="boot boot-center" title="Заполни все обязательные поля">
+                    <button type="submit" class="boot boot-center" id="submitFF" name="sendMail">Отправить</button>
                 </div>
             </form>
 
