--- a/requirements.html
+++ b/requirements.html
@@ -481,6 +481,7 @@
         </div>
     </div>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="js/feedback.js"></script>
     <script src="js/main.js"></script>
     <script src="js/custom.js"></script>
     <script src="js/modernizr.js"></script>
